# whisper-typer-tool

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  whisper-typer  whisper-typer-tool.py
